--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
     gap: 5px;
     text-decoration: none;
     color: #000000;
+    cursor: pointer;
 }
 
 .link2 {
@@ -344,7 +345,8 @@ input[type="checkbox"] {
 
 .outlet {
     padding-top: 20px;
-    height: 100%;
+    /* height: 100%; */
+    height: calc(100% - 83px);
     background-color: #f7f9fb;
 }
 
@@ -731,14 +733,15 @@ table#example {
 
 
 
-.copy-btn  {
+.copy-btn {
     color: #4285F4 !important;
 }
 
-.css-1umw9bq-MuiSvgIcon-root,  .css-q7mezt{
-   color: #1c1c1c;
+.css-1umw9bq-MuiSvgIcon-root,
+.css-q7mezt {
+    color: #1c1c1c;
 }
- 
+
 
 .css-q7mezt {
     color: #1c1c1c;
