settings and permission module changes

--- a/src/App.css
+++ b/src/App.css
@@ -730,14 +730,15 @@ table#example {
 
 
 
-.copy-btn  {
+.copy-btn {
     color: #4285F4 !important;
 }
 
-.css-1umw9bq-MuiSvgIcon-root,  .css-q7mezt{
-   color: #1c1c1c;
+.css-1umw9bq-MuiSvgIcon-root,
+.css-q7mezt {
+    color: #1c1c1c;
 }
- 
+
 
 .css-q7mezt {
     color: #1c1c1c;
